objects/User.object
<CustomObject>
    <fields>
        <fullName>Secure_GUID__c</fullName>
        <formula>Contact.Secure_GUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secure GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_ID__c</fullName>
        <formula>Contact.URL_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <sharingModel>Read</sharingModel>
</CustomObject>